--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Kanban app a</title>
+    <title>Exp React</title>
 </head>
 <body>
 <div id="app"></div>
